src/test/ui/associated-consts/associated-const-array-len.stderr
error[E0277]: the trait bound `i32: Foo` is not satisfied
  --> $DIR/associated-const-array-len.rs:5:16
   |
LL |     const ID: usize;
   |     ---------------- required by `Foo::ID`
...
LL | const X: [i32; <i32 as Foo>::ID] = [0, 1, 2];
   |                ^^^^^^^^^^^^^^^^ the trait `Foo` is not implemented for `i32`

error: aborting due to previous error

For more information about this error, try `rustc --explain E0277`.
